# school-api

./: classes.json  db.sqlite3  pyproject.toml  readme.md  requirements.txt
core/: .env  settings.py  urls.py
school_api/: admin.py  classes.py  filler.py  models.py  serializers.py  urls.py  views.py
school_api/migrations/: 0001_initial.py  0002_auto_20210512_2224.py
