[tool.poetry]
name = "django-api"
version = "0.1.0"
description = ""
authors = ["seth mcfeeters <seth.mcfeeters@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
djangorestframework = "^3.12.4"
django-environ = "^0.4.5"
Faker = "^8.1.1"
django-filter = "^2.4.0"
djoser = "^2.1.0"
djangorestframework-simplejwt = "^4.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
